--- a/styles/style.css
+++ b/styles/style.css
@@ -1,13 +1,12 @@
-/*
-Colors:
 
-Text: 1A1A1A
-Green: #00B172
-White: #FFF
 
-*/
+/*/* ------------HEADER------------------- */
+
 @import url('https://fonts.googleapis.com/css?family=Poppins');
 
+* {
+  box-sizing: border-box;
+}
 body {
   font-family: 'Poppins';
 }
@@ -57,6 +56,9 @@ a {
   font-size: 16px;
 }
 
+/* ------------SECTION1------------------- */
+
+
 .cover {
   background-image: url("../images/landing.jpg");
   width: 100%;
@@ -70,7 +72,7 @@ a {
 .section1 {
   position: absolute;
   top: 40%;
-  left: 40%;
+  left: 30%;
   color: white;
   height: 100%;
 }
@@ -81,6 +83,7 @@ a {
   text-align: center;
 }
 
+/* ------------SECTION2------------------- */
 /* Cada div ocupa un terç del contenidor */
 .section2 {
   display: flex;
@@ -137,4 +140,24 @@ a {
   width: auto;
   height: auto;
   margin-bottom: 15px;
+}
+
+/* /* ------------SECTION3------------------- */
+.section3 {
+  background-color: #1AB26B;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#spotify__white {
+  display: flex;
+  width: 10vh;
+  height: 10vh;
+  justify-content: center;
+  align-items: center;
+}
+.text {
+  float: left;
+  color: white;
 }
